[package]
name = "web_sys_resumable"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
js-sys = "0.3.69"
serde = { version="1", features=["derive"] }
sha2 = "0.10.8"
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3"
features = ["console", "File"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
once_cell = "1"
