[package]
name = "web_sys_resumable"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"
description = "Primitive for resumable uploads over web_sys::File"
repository = "https://github.com/littlebenlittle/web_sys_resumable"

[dependencies]
anyhow = "1"
js-sys = "0.3"
serde = { version="1", features=["derive"] }
sha2 = "0.10"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console", "File"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
