[package]
name = "tus_web"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE.md"
description = "TUS protocol client for the web."
repository = "https://github.com/littlebenlittle/web_sys_resumable"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
web_sys_resumable = { path = "../resumable" }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
base64 = "0.22.1"

[dependencies.web-sys]
version = "0.3"
features = ["File", "console"]

[dependencies.gloo-net]
git = "https://github.com/rustwasm/gloo"
branch = "master"

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"

